source/assets/stylesheets/components/_card.scss
.cards-skills {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  margin: 16px;
  padding: 16px;
  grid-gap: 32px;
}

.card-about {
  margin: 16px;
  padding: 16px;
  .card-about-contact {
    display: flex;
    justify-content: center;
    font-size: 24px;

    @keyframes wiggle {
      0% { transform: rotate(0deg); }
      5% { transform: rotate(5deg); }
      15% { transform: rotate(-5deg); }
      20% { transform: rotate(0deg); }
      100% { transform: rotate(0deg); }
    }
    
    a.wiggle:hover {
      animation: wiggle 2.5s infinite;
    }
    a {
      text-decoration: none;
      color: black;
      font-weight: bold;
    }
    i {
      margin: 6px 16px 0px 16px;
    }
  }
}

.card-project {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 96px 0px;
  h1 {
    margin: 0px 0px 32px 0px;
  }
}

.card-project-info-right {
  width: 100%;
  margin: 0px 0px 0px 64px;
  h1 {
    margin: 0px 0px 32px 0px !important;
  }
  p {
    margin-bottom: 24px;
  }
}

.card-project-info-left {
  width: 100%;
  margin: 0px 64px 0px 0px;
  h1 {
    margin: 0px 0px 32px 0px !important;
  }
  p {
    margin-bottom: 24px;
  }
}

.card-project-info-surface {
  width: 100%;
  margin: 0px 0px 0px 96px;
  h1 {
    margin: 0px 0px 32px 0px !important;
  }
  p {
    margin-bottom: 24px;
  }
}

.card-contact {
  display: flex;
  align-items: center;
  justify-content: center;
  a {
    color: black;
    opacity: 0.15;
    text-decoration: none;
    font-size: 32px;
    padding: 0px 10px;
    transition: transform 250ms cubic-bezier(0.61,-0.19, 0.7,-0.11);
    &:hover {
      transform: translateY(-20%);
      opacity: 1;
    }
  }
  i {
    font-size: 32x;
  }
}

@media(max-width: 768px) {

  .card-project-mirror div:first-child {
    order: 2;
  }
  .card-project {
    flex-direction: column;
    padding: 32px 0px 48px 0px;
    .card-project-info-right, .card-project-info-left, .card-project-info-surface {
      margin: 32px 0px;
    }
  }
  .card-about {
    margin: 16px 16px 32px 16px;
    .card-about-contact {
      font-size: 19px;
    }
  }
}

